Atualização dos códigos

--- a/stats.ipynb
+++ b/stats.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "def medidas_resumo():\n",
     "    \n",
-    "    teste\n",
+    "    # coloque seu código aqui para retornar as medidas resumo principais para as variáveis numéricas da base\n",
     "    "
    ]
   },
