--- a/stats.ipynb
+++ b/stats.ipynb
@@ -28,7 +28,7 @@
     "def medidas_resumo():\n",
     "    \n",
     "    print(df.describe())\n",
-    "    "
+    "    return True"
    ]
   },
   {
