--- a/stats.ipynb
+++ b/stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,9 +37,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def top_10_modelos(df = df):\n",
     "    \n",
     "    # coloque seu código aqui para retornar os top 10 modelos com maior horse power\n",
+    "    return df.sort_values(by='horsepower', ascending=False).head(10)\n",
     "    "
    ]
   },
@@ -64,35 +74,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              mpg   cylinders  displacement  horsepower       weight  \\\n",
-      "count  398.000000  398.000000    398.000000  392.000000   398.000000   \n",
-      "mean    23.514573    5.454774    193.425879  104.469388  2970.424623   \n",
-      "std      7.815984    1.701004    104.269838   38.491160   846.841774   \n",
-      "min      9.000000    3.000000     68.000000   46.000000  1613.000000   \n",
-      "25%     17.500000    4.000000    104.250000   75.000000  2223.750000   \n",
-      "50%     23.000000    4.000000    148.500000   93.500000  2803.500000   \n",
-      "75%     29.000000    8.000000    262.000000  126.000000  3608.000000   \n",
-      "max     46.600000    8.000000    455.000000  230.000000  5140.000000   \n",
-      "\n",
-      "       acceleration  model_year  \n",
-      "count    398.000000  398.000000  \n",
-      "mean      15.568090   76.010050  \n",
-      "std        2.757689    3.697627  \n",
-      "min        8.000000   70.000000  \n",
-      "25%       13.825000   73.000000  \n",
-      "50%       15.500000   76.000000  \n",
-      "75%       17.175000   79.000000  \n",
-      "max       24.800000   82.000000  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "medidas_resumo()"
    ]
@@ -103,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "top_10_modelos()"
+    "top_10_modelos(df)"
    ]
   },
   {
