reset do arquivo para exercício

--- a/stats.ipynb
+++ b/stats.ipynb
@@ -35,18 +35,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def medidas_resumo():\n",
-    "    \n",
-    "    print(df.describe())\n",
-    "    return True"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -261,14 +249,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def medidas_resumo():\n",
+    "    # coloque seu código aqui para retornar as medidas resumo da tabela "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def top_10_modelos(df = df):\n",
-    "    \n",
     "    # coloque seu código aqui para retornar os top 10 modelos com maior horse power\n",
-    "    return df.sort_values(by='horsepower', ascending=False).head(10)\n",
     "    "
    ]
   },
@@ -279,7 +275,6 @@
    "outputs": [],
    "source": [
     "def histograma_de_anos(df = df):\n",
-    "    histograma = sns.distplot(df['model_year'],bins=10)\n",
     "    # coloque seu código aqui para retornar o histograma do model_year\n",
     "        "
    ]
@@ -348,7 +343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
